# Prot-xLSTM

./: .gitignore  README.md  prot_xlstm_env.yml  pyproject.toml
configs/: llama_default_config.yaml  mamba_default_config.yaml  train_default_config.yaml  xlstm_default_config.yaml
data/: cluster_training_eval_set.txt  cluster_validation_set.txt
evaluation/generation/: final_evaluation.ipynb  run_sample_sequences.py  run_score_sequences.py
evaluation/pretraining/: evaluate.py  learning_curves.json  learning_curves.py
evaluation/proteingym/: run.py  score.py
examples/: generation.ipynb  variant_fitness.ipynb
examples/example_msas/: A0A1C5UJ41.a3m
protxlstm/: __init__.py  data.py  dataloaders.py  fim.py  generation.py  mamba_utils_generation.py  plot_utils.py  train.py  trainer.py  utils.py
protxlstm/applications/: fitness_prediction.py  msa_sampler.py  sample_sequences.py  score_sequences.py
protxlstm/applications/generation_utils/: create_sequence_df.py  score_hamming.py  score_hmmer.py  score_structure.py
protxlstm/models/: llama.py  mamba.py  xlstm.py
protxlstm/xlstm/: __init__.py  xlstm_block_stack.py  xlstm_lm_model.py
protxlstm/xlstm/blocks/: xlstm_block.py
protxlstm/xlstm/blocks/mlstm/: backends.py  block.py  cell.py  layer.py
protxlstm/xlstm/components/: conv.py  rotary_position.py
